fixing tooltip on mobile

--- a/with-tailwindcss-app/styles/globals.css
+++ b/with-tailwindcss-app/styles/globals.css
@@ -89,7 +89,7 @@ ul {
 }
 
 .tooltip {
-  @apply invisible absolute rounded shadow-lg px-2 bg-gray-200 text-gray-700 -mt-6;
+  @apply break-all mx-auto invisible absolute rounded shadow-lg px-2 bg-gray-200 text-gray-700 -mt-6 text-xs sm:text-base overflow-hidden;
 }
 
 .has-tooltip:hover .tooltip {
